[tool.enscons]
name = "rsalette"
version = "0.4.2"
description = "A pure-Python 2+3 RSA verification library."
classifiers = ["Topic :: Security :: Cryptography", "License :: OSI Approved :: Apache Software License"]
keywords = ["rsa", "jwk", "jwt"]
author = "Daniel Holth"
author_email = "dholth@fastmail.fm"
url = "http://bitbucket.org/dholth/rsalette/"
license = "ASL 2"
tests_require = ["nose", "coverage"]
description_file = "README.txt"
src_root = ""

[tool.enscons.extras_require]
test = ["nose", "coverage"]

[build-system]
requires = ["pytoml>=0.1", "enscons"]
build-backend = "enscons.api"

